[package]
name = "mygrep"
version = "0.1.0"
edition = "2021"
authors = ["Riccardo Bella <raikoug@email.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
keywords = ["cli", "grep", "search"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
colored = ">=2.1"
regex = ">=1.10.3"